<resources>
    <string name="app_name">Cinergy</string>
    <string name="title_escape_room">EscapeRoom</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="label_back">Back</string>
    <string name="label_location">Location</string>
    <string name="label_join_the_magic">Join The Magic</string>
    <string name="label_be_cinergy_elite">Be Cinergy ELITE!</string>
    <string name="action_continue_as_guest">Continue As Guest</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_now">Sign In Now!</string>
    <string name="label_don_t_have_an_account">Don\'t have an account</string>
    <string name="label_escape_room">Escape Rooms</string>
    <string name="action_book_now">Book Now</string>
    <string name="label_more">More</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_continue">Continue</string>
    <string name="label_choose_date">Choose Date</string>
    <string name="label_choose_time">Choose Time</string>
</resources>