<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.landing.LandingFragment">

    <data>

        <variable
            name="adpater"
            type="com.nisanth.cinergy.di.utility.CommonAdapter" />

        <variable
            name="viewModel"
            type="com.nisanth.cinergy.ui.landing.LandingViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spacing_normal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:padding="@dimen/spacing_small"
                android:src="@drawable/cynergy_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvJoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_46"
                android:text="@string/label_join_the_magic"
                android:textSize="@dimen/size_18"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLogo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvElite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:text="@string/label_be_cinergy_elite"
                android:textColor="@color/black"
                android:textSize="@dimen/size_26"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvJoin" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBenefits"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_0"
                android:layout_marginVertical="@dimen/spacing_medium"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvElite"
                app:setBenefits="@{viewModel.benefits}"
                app:setBenefitsAdapter="@{adpater}"
                tools:itemCount="4"
                tools:listitem="@layout/layout_benefits_item" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignIn"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:text="@string/action_sign_in_now"
                app:layout_constraintBottom_toTopOf="@+id/tvNoAccount" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="@string/label_don_t_have_an_account"
                android:textSize="@dimen/size_12"
                app:layout_constraintBottom_toTopOf="@id/btnSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up"
                app:layout_constraintBottom_toTopOf="@+id/btnGuest" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGuest"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.onClick}"
                android:text="@string/action_continue_as_guest"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>